Maria db connec basics

--- a/requirements.in
+++ b/requirements.in
@@ -1,2 +1,3 @@
 inquirer           # Just needed for IO test
+mariadb            # Persistence via mySQL-like DB
 RPi.GPIO==0.7.1a4  # Potentially more specific than needed, but matching IO in system setup
