First draft of db populator

--- a/requirements.in
+++ b/requirements.in
@@ -1,3 +1,4 @@
+click              # Helper for command-line tool niceties
 inquirer           # Just needed for IO test
 mariadb            # Persistence via mySQL-like DB
 RPi.GPIO==0.7.1a4  # Potentially more specific than needed, but matching IO in system setup
